k8s/db-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nest-db
  namespace: nest
spec:
  serviceName: nest-db
  replicas: 1
  selector:
    matchLabels:
      app: nest-db
  template:
    metadata:
      labels:
        app: nest-db
    spec:
      containers:
      - name: postgres
        image: postgres:16.4
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        readinessProbe:
          exec:
            command: ["pg_isready", "-U", "nest_user_dev", "-d", "nest_db_dev"]
          initialDelaySeconds: 5
          periodSeconds: 5
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: nest-db
  namespace: nest
spec:
  selector:
    app: nest-db
  ports:
  - port: 5432
    targetPort: 5432
  clusterIP: None
